--- a/delivery.html
+++ b/delivery.html
@@ -556,5 +556,80 @@ setInterval(setLiveLocation, 15000);
     alert("📩 New Order: " + payload.notification?.title);
     loadOrders(); // refresh orders
   });
-</script></body>  
+</script>
+
+  <script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getMessaging, getToken } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js";
+
+/* 🔥 Firebase Config */
+const firebaseConfig = {
+  apiKey: "AIzaSyBioiLSE3HyZh49yJv93MwnQFrmAm6wJ5g",
+  authDomain: "shop-ab586.firebaseapp.com",
+  projectId: "shop-ab586",
+  messagingSenderId: "603669325846",
+  appId: "1:603669325846:web:00f3ccff7fa977bf542d37"
+};
+
+/* 🚀 Init Firebase */
+const app = initializeApp(firebaseConfig);
+const messaging = getMessaging(app);
+
+/* 🧠 Register Service Worker */
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/firebase-messaging-sw.js")
+    .then(() => console.log("✅ Service Worker Registered"))
+    .catch(err => console.error("❌ SW Registration Error", err));
+}
+
+/* 🔔 Init FCM for DELIVERY */
+async function initFCM() {
+
+  const userId = localStorage.getItem("userId");
+  const role = localStorage.getItem("role");
+
+  // ❌ only for delivery dashboard
+  if (!userId || role !== "delivery") {
+    console.log("⛔ Not a delivery user");
+    return;
+  }
+
+  const permission = await Notification.requestPermission();
+  if (permission !== "granted") {
+    console.log("❌ Notification permission denied");
+    return;
+  }
+
+  const fcmToken = await getToken(messaging, {
+    vapidKey: "BFcKfbosO2sXWogZ5fBBt31vEkw_1iwgQWVrZjAJ90pXdhdFBSbXM_Oppuoxm-QIidekMzIQdcl3XrJy0ltkC8s"
+  });
+
+  if (!fcmToken) {
+    console.log("❌ FCM Token not generated");
+    return;
+  }
+
+  console.log("🔥 DELIVERY FCM TOKEN:", fcmToken);
+
+  // 📡 Save token in backend
+  await fetch("https://shopbacked-vmhs.onrender.com/api/notifications/saveToken", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      userId,
+      role: "delivery",
+      fcmToken
+    })
+  });
+
+  console.log("✅ Delivery token saved successfully");
+}
+
+/* ▶️ Start */
+window.addEventListener("load", initFCM);
+
+  </script>
+
+</body>  
 </html>
