--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>  
 <meta charset="UTF-8">  
 <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-<title>बाजार साथी • Black Theme Ultra Panel</title>  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">  
+<title>Bazaar Sathi • Black Theme Ultra Panel</title>  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">  
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">  <style>  
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Poppins",sans-serif;}  
 body{min-height:100vh;background: radial-gradient(circle at top,#000,#0a0a0a,#111);display:flex;justify-content:center;align-items:flex-start;padding:50px 0;overflow-x:hidden;color:#fff;}  
@@ -30,7 +30,7 @@ form::-webkit-scrollbar{width:6px;}
 form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}  
 </style>  </head>  
 <body>  <div class="container">  
-    <h1>बाजार साथी</h1>  
+    <h1>Bazaar Sathi</h1>  
     <div class="nav-buttons">  
         <button onclick="showPanel('wholesaler')"><i class="fas fa-store" style="color:#00eaff;"></i> Wholesaler</button>  
         <button onclick="showPanel('retailer')"><i class="fas fa-cart-shopping" style="color:#ffea00;"></i> Retailer</button>  
