--- a/index.html
+++ b/index.html
@@ -1,284 +1,115 @@
-<!DOCTYPE html>
-<html lang="hi">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bazaar Sathi • Smart Supply Network</title>
+<!DOCTYPE html>  <html lang="hi">  
+<head>  
+<meta charset="UTF-8">  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+<title>Bazaar Sathi • Black Theme Ultra Panel</title>  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">  
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">  <style>  
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Poppins",sans-serif;}  
+body{min-height:100vh;background: radial-gradient(circle at top,#000,#0a0a0a,#111);display:flex;justify-content:center;align-items:flex-start;padding:50px 0;overflow-x:hidden;color:#fff;}  
+body::before{content:'';position:fixed;top:-100px;left:-100px;width:300px;height:300px;background:#00eaff22;border-radius:50%;filter:blur(120px);animation:move1 12s infinite linear;}  
+body::after{content:'';position:fixed;bottom:-100px;right:-100px;width:350px;height:350px;background:#ff00ff22;border-radius:50%;filter:blur(150px);animation:move2 15s infinite linear;}  
+@keyframes move1{0%{transform:translate(0,0);}50%{transform:translate(80px,120px);}100%{transform:translate(0,0);}}  
+@keyframes move2{0%{transform:translate(0,0);}50%{transform:translate(-100px,-160px);}100%{transform:translate(0,0);}}  
+.container{width:90%;max-width:500px;background:rgba(0,0,0,0.55);border:1px solid #ffffff22;padding:35px;border-radius:20px;box-shadow:0 0 35px #00eaff33;backdrop-filter:blur(18px);text-align:center;z-index:10;}  
+h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaff;}  
+.nav-buttons{display:flex;flex-wrap:wrap;justify-content:center;margin-bottom:25px;gap:12px;}  
+.nav-buttons button{padding:14px 20px;border:none;border-radius:14px;cursor:pointer;font-weight:700;color:#fff;background:#000000aa;border:1px solid #ffffff22;transition:0.4s;display:flex;align-items:center;gap:8px;font-size:16px;box-shadow:0 0 8px #00000088;}  
+.nav-buttons button:hover{background:#00eaff33;transform:scale(1.06);box-shadow:0 0 20px #00eaff55;}  
+.nav-buttons i{font-size:20px;}  
+.tabs{display:flex;margin-bottom:18px;border-radius:12px;overflow:hidden;background:#00000055;border:1px solid #333;}  
+.tab{width:50%;padding:12px;cursor:pointer;color:#fff;font-weight:600;transition:0.3s;}  
+.tab.active{background:#00eaff33;}  
+form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
+form.active{display:block;}  
+input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
+input::placeholder{color:#aaa;}  
+input:focus{border:1px solid #00eaff;box-shadow:0 0 12px #00eaff66;}  
+button.submit{width:100%;padding:14px;border:none;border-radius:14px;margin-top:18px;background:#00eaffaa;color:#000;font-size:19px;font-weight:700;cursor:pointer;transition:0.3s;box-shadow:0 0 18px #00eaff88;}  
+button.submit:hover{transform:scale(1.03);background:#00eaff;box-shadow:0 0 25px #00eaff;}  
+form::-webkit-scrollbar{width:6px;}  
+form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}  
+</style>  </head>  
+<body>  <div class="container">  
+    <h1>Bazaar Sathi</h1>  
+    <div class="nav-buttons">  
+        <button onclick="showPanel('wholesaler')"><i class="fas fa-store" style="color:#00eaff;"></i> Wholesaler</button>  
+        <button onclick="showPanel('retailer')"><i class="fas fa-cart-shopping" style="color:#ffea00;"></i> Retailer</button>  
+        <button onclick="showPanel('delivery')"><i class="fas fa-motorcycle" style="color:#00ff88;"></i> Delivery Boy</button>  
+          
+    </div>  <!-- WHOLESALER -->  
+<div id="wholesaler" class="panel" style="display:none;">  
+    <div class="tabs">  
+        <div class="tab active" onclick="switchTab('wholesaler','signup')">Sign-Up</div>  
+        <div class="tab" onclick="switchTab('wholesaler','login')">Login</div>  
+    </div>  
+    <form id="wholesaler-signup" class="active">  
+        <input type="text" placeholder="Name">  
+        <input type="number" placeholder="UPI Mobile Number">  
+        <input type="text" placeholder="Shop Current Location">  
+        <input type="password" placeholder="Password">  
+        <input type="password" placeholder="Confirm Password">  
+        <button type="button" class="submit">Create Account</button>  
+    </form>  
+    <form id="wholesaler-login">  
+        <input type="number" placeholder="Mobile Number">  
+        <input type="password" placeholder="Password">  
+        <button type="button" class="submit">Login</button>  
+    </form>  
+</div>  
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+<!-- RETAILER -->  
+<div id="retailer" class="panel" style="display:none;">  
+    <div class="tabs">  
+        <div class="tab active" onclick="switchTab('retailer','signup')">Sign-Up</div>  
+        <div class="tab" onclick="switchTab('retailer','login')">Login</div>  
+    </div>  
+    <form id="retailer-signup" class="active">  
+        <input type="text" placeholder="Name">  
+        <input type="text" placeholder="Mobile Number">  
+        <input type="text" placeholder="Shop Current Location">  
+        <input type="password" placeholder="Password">  
+        <input type="password" placeholder="Confirm Password">  
+        <button type="button" class="submit">Create Account</button>  
+    </form>  
+    <form id="retailer-login">  
+        <input type="text" placeholder="Mobile Number">  
+        <input type="password" placeholder="Password">  
+        <button type="button" class="submit">Login</button>  
+    </form>  
+</div>  
 
-<style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:"Poppins",sans-serif}
+<!-- DELIVERY BOY -->  
+<div id="delivery" class="panel" style="display:none;">  
+    <div class="tabs">  
+        <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>  
+        <div class="tab" onclick="switchTab('delivery','login')">Login</div>  
+    </div>  
+    <form id="delivery-signup" class="active">  
+        <input type="text" placeholder="Name">  
+        <input type="text" placeholder="Mobile Number">  
+        <input type="text" placeholder="Alternate Mobile (optional)">  
+        <input type="text" placeholder="Current Live Location">  
+        <input type="password" placeholder="Password">  
+        <input type="password" placeholder="Confirm Password">  
+        <select>  
+            <option>2-Wheeler</option>  
+            <option>3-Wheeler</option>  
+            <option>4-Wheeler</option>  
+        </select>  
+        <input type="text" placeholder="Vehicle Model">  
+        <input type="text" placeholder="Vehicle Number">  
+        <button type="button" class="submit">Create Account</button>  
+    </form>  
+    <form id="delivery-login">  
+        <input type="text" placeholder="Mobile Number">  
+        <input type="password" placeholder="Password">  
+        <button type="button" class="submit">Login</button>  
+    </form>  
+</div>  
 
-body{
-  min-height:100vh;
-  background:#020617;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  color:#fff;
-  overflow-x:hidden;
-}
 
-/* BACKGROUND GLOW */
-.bg-glow{
-  position:fixed;
-  inset:0;
-  z-index:-1;
-  background:
-    radial-gradient(circle at 20% 20%, #22d3ee33, transparent 40%),
-    radial-gradient(circle at 80% 80%, #a855f733, transparent 45%);
-}
 
-/* CONTAINER */
-.container{
-  width:94%;
-  max-width:520px;
-  background:rgba(15,23,42,0.85);
-  border:1px solid #ffffff14;
-  border-radius:22px;
-  padding:34px 26px;
-  box-shadow:0 30px 80px #000000aa;
-  backdrop-filter:blur(16px);
-}
-
-/* LOGO */
-.logo-wrap{
-  position:relative;
-  display:inline-block;
-  margin-bottom:22px;
-}
-
-.brand-logo{
-  font-size:38px;
-  font-weight:800;
-  padding:10px 24px;
-  letter-spacing:1px;
-  border-radius:18px;
-  background:linear-gradient(90deg,#22d3ee,#a855f7);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-  position:relative;
-  z-index:2;
-}
-
-.logo-glow{
-  position:absolute;
-  inset:-14px;
-  border-radius:22px;
-  background:
-    radial-gradient(circle at top left,#22d3ee55,transparent 55%),
-    radial-gradient(circle at bottom right,#a855f755,transparent 60%);
-  filter:blur(18px);
-  z-index:1;
-}
-
-.logo-wrap::after{
-  content:'';
-  position:absolute;
-  inset:-6px;
-  border-radius:20px;
-  background:rgba(255,255,255,0.04);
-  border:1px solid #ffffff1a;
-  z-index:0;
-}
-
-/* BRAND TEXT */
-.brand{
-  text-align:center;
-  margin-bottom:26px;
-}
-.brand p{
-  margin-top:8px;
-  font-size:14px;
-  color:#cbd5f5;
-}
-
-/* ROLE BUTTONS */
-.roles{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:12px;
-  margin-bottom:22px;
-}
-.roles button{
-  padding:14px 10px;
-  border-radius:16px;
-  border:1px solid #ffffff1f;
-  background:#020617;
-  color:#e5e7eb;
-  font-weight:600;
-  cursor:pointer;
-  transition:.25s;
-  box-shadow:0 8px 18px #000000aa;
-}
-.roles button:hover{
-  background:linear-gradient(180deg,#22d3ee22,#a855f722);
-  transform:translateY(-3px);
-  box-shadow:0 14px 30px #22d3ee44;
-}
-
-/* PANELS */
-.panel{
-  display:none;
-  animation:panelIn .35s ease;
-}
-@keyframes panelIn{
-  from{opacity:0;transform:translateY(12px) scale(.98)}
-  to{opacity:1;transform:none}
-}
-
-/* TABS */
-.tabs{
-  display:flex;
-  background:#020617;
-  border-radius:14px;
-  overflow:hidden;
-  margin-bottom:18px;
-}
-.tab{
-  flex:1;
-  padding:12px;
-  text-align:center;
-  cursor:pointer;
-  font-weight:600;
-  color:#94a3b8;
-}
-.tab.active{
-  background:#22d3ee22;
-  color:#fff;
-}
-
-/* FORM */
-form{display:none}
-form.active{display:block}
-
-input,select{
-  width:100%;
-  margin:10px 0;
-  padding:13px 14px;
-  border-radius:14px;
-  border:1px solid #ffffff1f;
-  background:#020617;
-  color:#fff;
-  font-size:15px;
-  box-shadow:inset 0 0 0 1px #ffffff12;
-}
-input::placeholder{color:#94a3b8}
-input:focus,select:focus{
-  outline:none;
-  border-color:#22d3ee;
-  box-shadow:0 0 0 1px #22d3ee,0 0 14px #22d3ee55;
-}
-
-/* SUBMIT */
-.submit{
-  margin-top:18px;
-  width:100%;
-  padding:15px;
-  font-size:18px;
-  font-weight:700;
-  border:none;
-  border-radius:16px;
-  background:linear-gradient(90deg,#22d3ee,#a855f7);
-  color:#020617;
-  cursor:pointer;
-  transition:.3s;
-}
-.submit:hover{transform:scale(1.03)}
-</style>
-</head>
-
-<body>
-<div class="bg-glow"></div>
-
-<div class="container">
-
-  <div class="brand">
-    <div class="logo-wrap">
-      <span class="logo-glow"></span>
-      <h1 class="brand-logo">Bazaar Sathi</h1>
-    </div>
-    <p>Smart Wholesaler • Retailer • Delivery Network</p>
-  </div>
-
-  <div class="roles">
-    <button onclick="showPanel('wholesaler')">Wholesaler</button>
-    <button onclick="showPanel('retailer')">Retailer</button>
-    <button onclick="showPanel('delivery')">Delivery</button>
-  </div>
-
-  <!-- WHOLESALER -->
-  <div id="wholesaler" class="panel">
-    <div class="tabs">
-      <div class="tab active" onclick="switchTab('wholesaler','signup')">Sign-Up</div>
-      <div class="tab" onclick="switchTab('wholesaler','login')">Login</div>
-    </div>
-    <form id="wholesaler-signup" class="active">
-      <input placeholder="Full Name">
-      <input placeholder="Mobile / UPI Number">
-      <input placeholder="Shop Location">
-      <input type="password" placeholder="Password">
-      <input type="password" placeholder="Confirm Password">
-      <button class="submit">Create Account</button>
-    </form>
-    <form id="wholesaler-login">
-      <input placeholder="Mobile Number">
-      <input type="password" placeholder="Password">
-      <button class="submit">Login</button>
-    </form>
-  </div>
-
-  <!-- RETAILER -->
-  <div id="retailer" class="panel">
-    <div class="tabs">
-      <div class="tab active" onclick="switchTab('retailer','signup')">Sign-Up</div>
-      <div class="tab" onclick="switchTab('retailer','login')">Login</div>
-    </div>
-    <form id="retailer-signup" class="active">
-      <input placeholder="Shop Name">
-      <input placeholder="Mobile Number">
-      <input placeholder="Shop Location">
-      <input type="password" placeholder="Password">
-      <input type="password" placeholder="Confirm Password">
-      <button class="submit">Create Account</button>
-    </form>
-    <form id="retailer-login">
-      <input placeholder="Mobile Number">
-      <input type="password" placeholder="Password">
-      <button class="submit">Login</button>
-    </form>
-  </div>
-
-  <!-- DELIVERY -->
-  <div id="delivery" class="panel">
-    <div class="tabs">
-      <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>
-      <div class="tab" onclick="switchTab('delivery','login')">Login</div>
-    </div>
-    <form id="delivery-signup" class="active">
-      <input placeholder="Full Name">
-      <input placeholder="Mobile Number">
-      <select>
-        <option>Two Wheeler</option>
-        <option>Three Wheeler</option>
-        <option>Four Wheeler</option>
-      </select>
-      <input placeholder="Vehicle Number">
-      <input type="password" placeholder="Password">
-      <input type="password" placeholder="Confirm Password">
-      <button class="submit">Join as Delivery Partner</button>
-    </form>
-    <form id="delivery-login">
-      <input placeholder="Mobile Number">
-      <input type="password" placeholder="Password">
-      <button class="submit">Login</button>
-    </form>
-  </div>
-
-</div>
-
-<script type="module">
+</div>  <script type="module">
     if ("serviceWorker" in navigator) {
   navigator.serviceWorker.register("/firebase-messaging-sw.js")
     .then(() => console.log("✅ FCM Service Worker registered"))
@@ -319,61 +150,20 @@ async function requestNotificationPermission() {
     return false;
   }
     }
-/* ================= UI STATE ================= */
-let currentOpenPanel = null;
+/* ================= UI ================= */
+window.onload = ()=> showPanel('wholesaler');
 
-/* ================= ON LOAD ================= */
-window.onload = () => {
-  // start with all panels closed
-  document.querySelectorAll(".panel").forEach(p => {
-    p.style.display = "none";
-  });
+window.showPanel = (panelId)=>{
+  document.querySelectorAll('.panel').forEach(p=>p.style.display='none');
+  document.getElementById(panelId).style.display='block';
+  switchTab(panelId,'signup');
 };
 
-/* ================= PANEL TOGGLE ================= */
-window.showPanel = (panelId) => {
-
-  const panel = document.getElementById(panelId);
-
-  // 🔁 SAME ICON CLICK → CLOSE
-  if (currentOpenPanel === panelId) {
-    panel.style.display = "none";
-    currentOpenPanel = null;
-    return;
-  }
-
-  // ❌ CLOSE ALL PANELS
-  document.querySelectorAll(".panel").forEach(p => {
-    p.style.display = "none";
-  });
-
-  // ✅ OPEN CLICKED PANEL
-  panel.style.display = "block";
-  currentOpenPanel = panelId;
-
-  // DEFAULT → SIGNUP TAB
-  switchTab(panelId, "signup");
-};
-
-/* ================= TAB SWITCH ================= */
-window.switchTab = (panelId, tab) => {
-
-  const signupForm = document.getElementById(panelId + "-signup");
-  const loginForm  = document.getElementById(panelId + "-login");
-
-  const tabs = document.querySelectorAll(`#${panelId} .tab`);
-
-  // FORM VISIBILITY
-  signupForm.classList.toggle("active", tab === "signup");
-  loginForm.classList.toggle("active", tab === "login");
-
-  // TAB ACTIVE STATE
-  tabs.forEach((t, index) => {
-    t.classList.toggle(
-      "active",
-      index === (tab === "signup" ? 0 : 1)
-    );
-  });
+window.switchTab = (panel, tab)=>{
+  document.getElementById(panel+'-signup').classList.toggle('active',tab==='signup');
+  document.getElementById(panel+'-login').classList.toggle('active',tab==='login');
+  document.querySelectorAll('#'+panel+' .tab')
+    .forEach((t,i)=>t.classList.toggle('active', i === (tab==='signup'?0:1)));
 };
 
 /* ================= FCM TOKEN ================= */
@@ -471,7 +261,5 @@ async function loginUser(type,mobile,password){
     loginUser(type,inputs[0].value,inputs[1].value);
   };
 });
-</script>
-
-</body>
+</script>  </body>  
 </html>
