--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
 .tabs{display:flex;margin-bottom:18px;border-radius:12px;overflow:hidden;background:#00000055;border:1px solid #333;}  
 .tab{width:50%;padding:12px;cursor:pointer;color:#fff;font-weight:600;transition:0.3s;}  
 .tab.active{background:#00eaff33;}  
+.logo-text-only{
+  font-size:30px;
+  font-weight:900;
+  letter-spacing:1px;
+  padding:14px 26px;
+  border-radius:18px;
+  background:
+    radial-gradient(circle at top,#00eaff55,transparent 60%),
+    #020617;
+  border:1px solid #1f2937;
+  box-shadow:
+    0 0 25px #00eaff55,
+    inset 0 0 20px #000;
+}
 form{display:none;max-height:600px;overflow-y:auto;padding-right:5px;}  
 form.active{display:block;}  
 input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
@@ -30,7 +44,7 @@ form::-webkit-scrollbar{width:6px;}
 form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}  
 </style>  </head>  
 <body>  <div class="container">  
-    <h1>Bazaar Sathi</h1>  
+    <h1 class="logo-text-only">Bazaar Sathi</h1>  
     <div class="nav-buttons">  
         <button onclick="showPanel('wholesaler')"><i class="fas fa-store" style="color:#00eaff;"></i> Wholesaler</button>  
         <button onclick="showPanel('retailer')"><i class="fas fa-cart-shopping" style="color:#ffea00;"></i> Retailer</button>  
